# f1-demo

./: .gitignore  README.md  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/demo_data/: data_pull.py  laps.json  sector.json  weather.json
backend/src/: config.py  main.py
frontend/: Dockerfile  pyproject.toml
frontend/model/: encoder_telemetry.pkl  model_telemetry.pkl  scaler_dict_telemetry.pkl
frontend/src/: app.py  config.py  etl.py
