[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "ashton-cho",email = "ashton.cho@berkeley.edu"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "dash (>=3.1.1,<4.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=1.26.0,<2.2.0)",
    "scikit-learn ==1.7.0",
    "requests (>=2.32.4,<3.0.0)",
    "keras (>=3.10.0,<4.0.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "psutil (>=7.0.0,<8.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
